# tts-tax-app

./: .gitignore  CLAUDE.md  DECISIONS.md  MEMORY.md  Project_Status.md  STATUS.md  Start TTS Tax App.bat  build.sh  docker-compose.yml  render.yaml
server/: .env.example  CLAUDE.md  conftest.py  pyproject.toml
server/apps/accounts/: serializers.py  urls.py  views.py
server/apps/ai_help/: admin.py  apps.py  instruction_cache.py  models.py  service.py  urls.py  views.py
server/apps/audit/: admin.py  mixins.py  models.py  serializers.py  service.py  urls.py  views.py
server/apps/clients/: admin.py  models.py  serializers.py  urls.py  views.py
server/apps/core/: middleware.py  urls.py  views.py
server/apps/diagnostics/: admin.py  models.py  rules.py  runner.py  serializers.py  urls.py  views.py
server/apps/documents/: models.py  serializers.py  urls.py  views.py
server/apps/employers/: apps.py  learning.py  models.py  parsers.py  serializers.py  urls.py  views.py
server/apps/firms/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/apps/imports/: admin.py  lacerte_clientlist_parser.py  lacerte_parser.py  lacerte_sanitizer.py  urls.py  (+4 more)
server/config/: urls.py
server/scripts/: calibrate_coordinates.py  download_irs_templates.py  drop_test_db.py  export_rule_studio.py  extract_field_maps.py  fix_ken2_password.py  fix_membership.py  import_tb.py  kill_sessions.py  measure_7206_coords.py  measure_k1_coords.py  measure_k1_p2.py  measure_k1_rects.py  run_dev.ps1  run_diag.py  setup_ken2.py  show_tb.py  test_supabase_conn.py  verify_field_map.py  verify_field_map2.py
server/specs/: 1120s_k1_spec.json  1120s_m1_spec.json  1120s_m2_spec.json  1120s_page1_spec.json  1120s_sched_k_spec.json  flow_assertions_1040.json  flow_assertions_1120s.json  form_1125a_spec.json  form_1125e_spec.json  form_4562_spec.json  form_4797_spec.json  form_7004_spec.json  form_7203_spec.json  form_8453s_spec.json  form_8825_spec.json  form_8879s_spec.json  form_8949_spec.json  ga600s_spec.json  pdf_field_inventory.json  sch_8812_spec.json  sched_d_1120s_spec.json  schedule_l_4col_TY2025_v2_spec.json
server/tests/: test_1040.py  test_1120s_spec.py  test_4797_spec.py  test_7203_compute.py  test_8825_sched_l.py  test_acroform_1125a.py  test_acroform_7004.py  test_acroform_7203.py  test_acroform_8453s.py  test_acroform_8825.py  test_acroform_8879s.py  test_acroform_filler.py  test_acroform_k1.py  test_ai_help.py  test_apr01_fixes.py  test_audit.py  test_client_entity_link.py  test_client_import.py  test_clients.py  test_compute_8812_year_constants.py  test_dependents.py  test_depreciation_engine.py  test_diagnostics.py  test_dispositions.py  test_documents.py  test_employer_parsers.py  test_employers_api.py  test_f1040_2025_field_map_audit.py  test_firms.py  test_flow_assertions.py  test_ga600s.py  test_health.py  test_import_employers.py  test_import_lacerte_clients_cmd.py  test_import_scorps.py  test_imports.py  test_interest_income_expansion.py  test_k1_allocator.py  test_lacerte_clientlist_parser.py  test_lacerte_import.py  (+24 more)
(+252 files in other folders)
