[project]
name = "tts-tax-server"
version = "0.2.0"  # Source of truth: ../VERSION
description = "TTS Tax App - Django backend for professional tax preparation"
requires-python = ">=3.13,<3.15"
dependencies = [
    "django>=5.2,<6.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
    "djangorestframework>=3.15,<4.0",
    "openpyxl (>=3.1.5,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "reportlab>=4.1,<5.0",
    "pypdf>=4.0,<5.0",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "google-genai (>=1.64.0,<2.0.0)",
    "gunicorn>=22.0,<24.0",
    "whitenoise>=6.5,<7.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-django>=4.9,<6.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py"]
pythonpath = ["."]
